Revision history for Bible::OBML

{{$NEXT}}

1.16      2021-01-13 11:01:18-08:00 America/Los_Angeles
        - Override some minimum version reqs in dist.ini

1.15      2021-01-12 09:00:29-08:00 America/Los_Angeles
        - Migrate to Test2::V0
        - Improve .gitignore file
        - License migrate to Artistic 2.0
        - Migrate Travis CI and Coveralls to GitHub Actions and Codecov
        - Update copyright year
        - Update to require Bible::Reference 1.05

1.14      2020-07-17 15:21:06-07:00 America/Los_Angeles
        - Improved rendering of OBML from parsed data

1.13      2020-07-16 13:04:16-07:00 America/Los_Angeles
        - Replace deprecated throw() calls with croak()
        - Remove redundant utf8 file encoding setting

1.12      2020-07-09 08:25:15-07:00 America/Los_Angeles
        - Remove subroutine signatures to allow operation back to Perl 5.14

1.11      2020-07-08 18:41:16-07:00 America/Los_Angeles
        - Remove Moose dependency; replace with exact and exact::class
        - Update Travis YAML

1.10      2018-01-04 18:33:33-08:00 America/Los_Angeles
        - Several fixes for edge-case parsing bugs with blocks
        - Fix for rendering spacing ahead of new lines

1.09      2017-12-29 14:02:20-08:00 America/Los_Angeles
        - Removed binmode call to set standard in/out to UTF8 encoding

1.08      2017-12-26 14:12:35-08:00 America/Los_Angeles
        - Adding Perl versions to test; annual general update for 2018
        - Repair/patch outdated tests due to Bible::Reference upgrade

1.07      2016-11-28 11:53:46-08:00 America/Los_Angeles
        - Updated docs to skip mention of non-required ASCII-only requirement

1.06      2016-11-24 09:20:21-08:00 America/Los_Angeles
        - Change red text markers from <> to **

1.05      2015-01-29 13:08:28-08:00 America/Los_Angeles
        - Fix POD error that talked about wrong module (resolves issue #1)

1.04      2015-01-28 23:09:25-08:00 America/Los_Angeles