@@ -7,7 +7,6 @@ use exact;
 use exact::class;
 use Text::Balanced qw( extract_delimited extract_bracketed );
 use Text::Wrap 'wrap';
-use Bible::OBML::HTML;
 use Bible::Reference 1.05;
 use Clone 'clone';
 
@@ -16,7 +15,10 @@ use Clone 'clone';
 has bible    => 'Protestant';
 has acronyms => 1;
 has refs     => 'as_books';
-has html     => sub { Bible::OBML::HTML->new( obml => shift ) };
+has html     => sub {
+    require Bible::OBML::HTML;
+    Bible::OBML::HTML->new( obml => shift );
+};
 
 has _reference => sub { Bible::Reference->new( acronyms => 1 ) };
 
